# temporal-tui-rs

./: .gitignore  Cargo.toml  README.md
src/: app.rs  event.rs  main.rs  settings.rs  theme.rs  tui.rs  ui.rs
src/widgets/: common.rs  keybinds.rs  mod.rs  workflow.rs  workflow_table.rs
