[package]
name = "temporatuiltui-rs"
version = "0.1.0"
authors = ["Tomás Farías Santana <tomas@tomasfarias.dev>"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
config = { version = "0.15.6", features = ["toml"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
log = "0.4.25"
ratatui = { version = "0.29.0", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0.138", features = ["std"] }
structured-logger = "1.0.3"
temporal-client = { git = "https://github.com/temporalio/sdk-core", version = "0.1" }
temporal-sdk-core-protos = { git = "https://github.com/temporalio/sdk-core", version = "0.1" }
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.4"
